# kafka-node-rust-example

./: .gitignore  README.md
consumer/: index.js  package.json
producer/: Cargo.toml
producer/src/: main.rs
