[package]
name = "kafka"
version = "0.1.0"
authors = ["SaltyAom <aomkirby123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
rdkafka = "0.26.0"
tokio = { version = "1.7.1", features = ["full"] }
